--- a/pfirst/angular.json
+++ b/pfirst/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "pfirst": {
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "pfirst"
+    }
+  },
+  "defaultProject": "pfirst",
+  "cli": {
+    "analytics": "a23a383e-d6e3-4668-b14f-36b278340aac"
+  }
 }
