--- a/pfirst/package.json
+++ b/pfirst/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~9.0.1",
     "@angular/core": "~9.0.1",
     "@angular/forms": "~9.0.1",
+    "@angular/localize": "^9.1.0",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "bootstrap": "^4.0.0",
     "ng-recaptcha": "^5.0.0",
     "popper.js": "^1.16.1",
