service de compression ok #14

--- a/pfirst/package.json
+++ b/pfirst/package.json
@@ -24,8 +24,9 @@
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@popperjs/core": "^2.3.3",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.4.1",
     "ng-recaptcha": "^5.0.0",
+    "ngx-image-compress": "^8.0.4",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
