--- a/pfirst/package.json
+++ b/pfirst/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@popperjs/core": "^2.3.3",
+    "angular-notifier": "^6.0.1",
     "bootstrap": "^4.0.0",
     "ng-recaptcha": "^5.0.0",
     "popper.js": "^1.16.1",
