--- a/pfirst/e2e/tsconfig.json
+++ b/pfirst/e2e/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "commonjs",
     "target": "es5",
     "types": [
+      "googlemaps",
+      
       "jasmine",
       "jasminewd2",
       "node"
