--- a/pfirst/package.json
+++ b/pfirst/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~9.0.1",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.1",
@@ -24,7 +25,8 @@
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@popperjs/core": "^2.3.3",
-    "bootstrap": "^4.0.0",
+    "@types/google-maps": "^3.2.2",
+    "bootstrap": "^4.5.0",
     "ng-recaptcha": "^5.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
@@ -37,9 +39,10 @@
     "@angular/cli": "~9.0.2",
     "@angular/compiler-cli": "~9.0.1",
     "@angular/language-service": "~9.0.1",
-    "@types/node": "^12.11.1",
+    "@types/googlemaps": "^3.39.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
