translation adrress to lat/lng working #9

--- a/pfirst/package.json
+++ b/pfirst/package.json
@@ -26,7 +26,9 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@popperjs/core": "^2.3.3",
     "@types/google-maps": "^3.2.2",
+    "angular-maps": "^6.0.3",
     "bootstrap": "^4.5.0",
+    "google-maps": "^4.2.3",
     "ng-recaptcha": "^5.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
