--- a/pfirst/package.json
+++ b/pfirst/package.json
@@ -25,11 +25,11 @@
     "@angular/router": "~9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@popperjs/core": "^2.3.3",
-    "angular-notifier": "^6.0.1",
-    "compress-images": "^1.7.8",
     "@types/google-maps": "^3.2.2",
     "angular-maps": "^6.0.3",
+    "angular-notifier": "^6.0.1",
     "bootstrap": "^4.5.0",
+    "compress-images": "^1.7.8",
     "google-maps": "^4.2.3",
     "ng-recaptcha": "^5.0.0",
     "ngx-image-compress": "^8.0.4",
@@ -37,6 +37,7 @@
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
